Continue check unit test implementation compiling test with cmake

--- a/tests/helpers/Makefile.am
+++ b/tests/helpers/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-TESTS = check_sockets
-check_PROGRAMS = check_sockets
+TESTS = sockets-test
+check_PROGRAMS = sockets-test
 check_sockets_SOURCES = check_sockets.c $(top_builddir)/src/helpers/sockets.h
 check_sockets_CFLAGS = @CHECK_CFLAGS@
